fixed horizontal scrolling

--- a/app/src/styles/main.css
+++ b/app/src/styles/main.css
@@ -21,6 +21,8 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 h1,
